--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,4 @@
-$primary-colour: #444;
+$primary-colour: 	rgb(73, 6, 102);
 $secondary-colour: #eece1a;
 $show-home-image: true;
 $home-image: url(../../img/background.jpg);
