--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,7 +20,7 @@ h2,
 h3{
   margin:0;
   font-weight: 400;
-
+  
   &.lg-heading{
     font-style: 6rem;
   }
@@ -49,17 +49,17 @@ header{
 
 main{
   padding:4rem;
-  height: 100%;
+  //height: 100%;
+  min-height: calc(100vh - 60px);
 
   .icons{
     margin-top: 1rem;
 
     a{
       padding: 0.4rem;
-
+      @include easeOut;
       &:hover {
         color: $secondary-colour;
-        @include easeOut();
       }
     }
   }
@@ -71,3 +71,119 @@ main{
     }
   }
 }
+.about-info {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-areas:
+    'bioimage bio bio'
+    'job1 job2 job3';
+  grid-template-columns: repeat(3, 1fr);
+
+  .bio-image {
+    grid-area: bioimage;
+    margin: auto;
+    border-radius: 50%;
+    border: $secondary-colour 3px solid;
+  }
+
+  .bio {
+    grid-area: bio;
+    font-size: 1.5rem;
+  }
+
+  .job-1 {
+    grid-area: job1;
+  }
+
+  .job-2 {
+    grid-area: job2;
+  }
+
+  .job-3 {
+    grid-area: job3;
+  }
+
+  .job {
+    background: lighten($primary-colour, 5);
+    padding: 0.5rem;
+    border-bottom: $secondary-colour 5px solid;
+  }
+}
+
+// Work/Projects
+.projects {
+  display: grid;
+  grid-gap: 0.7rem;
+  grid-template-columns: repeat(3, 1fr);
+
+  img {
+    width: 100%;
+    border: 3px #fff solid;
+
+    &:hover {
+      opacity: 0.5;
+      border-color: $secondary-colour;
+      @include easeOut;
+    }
+  }
+}
+
+// Contact Page
+.boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem;
+
+  div {
+    font-size: 2rem;
+    border: 3px #fff solid;
+    padding: 1.5rem 2.5rem;
+    margin-bottom: 3rem;
+    @include easeOut;
+
+    &:hover {
+      padding: 0.5rem 1.5rem;
+      background: $secondary-colour;
+      color: set-text-colour($secondary-colour);
+      span {
+        color: set-text-colour($secondary-colour);
+      }
+    }
+  }
+}
+
+// Button Styles
+.btn {
+  display: block;
+  padding: 0.5rem 1rem;
+  border: 0;
+  margin-bottom: 0.3rem;
+  &:hover {
+    background: $secondary-colour;
+    color: set-text-colour($secondary-colour);
+  }
+}
+
+.btn-dark {
+  @extend .btn;
+  background: darken($primary-colour, 50);
+  color: #fff;
+}
+
+.btn-light {
+  @extend .btn;
+  background: lighten($primary-colour, 50);
+  color: #333;
+}
+
+#main-footer {
+  text-align: center;
+  padding: 1rem;
+  background: darken($primary-colour, 10);
+  color: set-text-color($primary-colour);
+  height: 60px;
+}
+
+@import 'mobile';
