modified:   dist/about.html modified:   dist/contact.html modified:   dist/css/--recursive/main.css modified:   dist/index.html modified:   dist/work.html modified:   package-lock.json modified:   package.json modified:   scss/_config.scss modified:   scss/_mobile.scss modified:   scss/main.scss

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,8 +1,8 @@
-$primary-colour: 	rgb(73, 6, 102);
-$secondary-colour: #eece1a;
+$primary-colour: 	#444;
+$secondary-colour: #a159ff;
 $show-home-image: true;
 $home-image: url(../../img/background.jpg);
-$background-opacity: 0.9;
+$background-opacity: 0.5;
 
 @mixin easeOut {
   transition: all 0.5s ease-out;
