--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,13 +22,13 @@ h3{
   font-weight: 400;
   
   &.lg-heading{
-    font-style: 6rem;
+    font-size: 5rem;
   }
 
   &.sm-heading{
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
-    background: rgba(lighten($primary-colour,2),0.5);
+    background: rgba(lighten($primary-colour,10),0.9);
   }
 }
 
@@ -179,7 +179,7 @@ main{
 }
 
 #main-footer {
-  text-align: center;
+  text-align: right;
   padding: 1rem;
   background: darken($primary-colour, 10);
   color: set-text-color($primary-colour);
