--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -86,7 +86,7 @@
         .portrait {
             width: 250px;
             height: 250px;
-            background: url('../../img/portrait.jpg');
+            background: url('');
             border-radius: 50%;
             border: solid 3px $secondary-colour;
         }
